aligned items correctly

--- a/styles/ConfirmationPage.module.scss
+++ b/styles/ConfirmationPage.module.scss
@@ -21,3 +21,23 @@
       padding: 2rem 1.5rem 3rem 1.5rem;
     }
   }
+
+  .logo-container-sign-up {
+    z-index: 1;
+    position: absolute;
+    top: 2rem;
+    left: 3rem;
+    display: flex;
+    justify-content: start;
+    gap: .5rem; 
+
+    @media(max-width: 1200px) {
+        position: unset;
+        order: -1;
+      }
+    
+      @media(max-width: 640px) {
+        flex-direction: column;
+        gap: 1rem;
+      }
+  }
