--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -32,6 +32,16 @@
     display: flex;
     justify-content: start;
     gap: .5rem; 
+
+    @media(max-width: 1200px) {
+      position: unset;
+      order: -1;
+    }
+  
+    @media(max-width: 640px) {
+      flex-direction: column;
+      gap: 1rem;
+    }
 }
 
 .inputfield {
